@startuml DM

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
}

class Entity {
  - id
  - latitude
  - longitude
  - localizationId
  - dailyData
}

class Client {
  - id
  - latitude
  - longitude
  - localizationId
}

class Enterprise {
  - id
  - latitude
  - longitude
  - localizationId
}

class Producer {
  - id
  - latitude
  - longitude
  - localizationId
}

class Product {
  - name
}

class Basket {
  - client
  - hub
  - ordered
  - received
}

class ExpeditionList {
  - day
}

class DailyData {}

ExpeditionList "1" o-- "*" Basket
DailyData "1" *-- "1" Entity

Company "1" o-- "*" Entity
Company "1" o-- "*" Product

Producer "1" -- "*" Basket : supplies
Client "1" -- "*" Basket : orders

Basket "1" -- "*" Product

Entity <|-- Client
Entity <|-- Enterprise
Entity <|-- Producer

@enduml
